--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "crystallize-nextjs-boilerplate",
+  "name": "nextjs-ornforlag-shop",
   "version": "5.0.0",
   "license": "MIT",
   "engines": {
     "node": ">=10.10"
   },
   "repository": {
-    "url": "git@github.com:CrystallizeAPI/crystallize-nextjs-boilerplate.git",
+    "url": "git@github.com:webmaeistro/crystallize-nextjs-boilerplate.git",
     "type": "git"
   },
   "scripts": {
