--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "env": {
-    "JWT_SECRET": "come-up-with-a-good-secret-here",
+    "JWT_SECRET": "suckyfuckyduckyluckysecret",
     "CRYSTALLIZE_SECRET_TOKEN_ID": "@crystallize-access-token-id",
     "CRYSTALLIZE_SECRET_TOKEN": "@crystallize-access-token-secret",
     "STRIPE_SECRET_KEY": "@stripe-secret-key",
@@ -11,7 +11,7 @@
   "build": {
     "env": {
       "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "@stripe-publishable-key",
-      "NEXT_PUBLIC_CRYSTALLIZE_TENANT_ID": "furniture"
+      "NEXT_PUBLIC_CRYSTALLIZE_TENANT_ID": "orn-forlag"
     }
   }
 }
