--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,12 @@
   "version": 2,
   "env": {
     "JWT_SECRET": "suckyfuckyduckyluckysecret",
-    "CRYSTALLIZE_SECRET_TOKEN_ID": "@crystallize-access-token-id",
-    "CRYSTALLIZE_SECRET_TOKEN": "@crystallize-access-token-secret",
-    "STRIPE_SECRET_KEY": "@stripe-secret-key",
-    "KLARNA_USERNAME": "@klarna-username",
-    "KLARNA_PASSWORD": "@klarna-password"
+    "CRYSTALLIZE_SECRET_TOKEN_ID": "95f29e0c6ec01528bb9f",
+    "CRYSTALLIZE_SECRET_TOKEN": "49cd2961158e7cbb85e680262b9db991940b17af",
+    "SENDGRID_API_KEY": "5eb311d3ba5038001c018b9f"
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "@stripe-publishable-key",
       "NEXT_PUBLIC_CRYSTALLIZE_TENANT_ID": "orn-forlag"
     }
   }
